--- a/changeapp/templates/index.html
+++ b/changeapp/templates/index.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time for Change</title>
-</head>
-
-<body>
+{% extends 'base.html' %}
+{% load bootstrap5 %}
+{% block content %}
     <h1>The time has come</h1>
-
-</body>
-
-</html>
+    <a href="{% url 'profile'  user.username %}">Profile</a>
+    {% for article in articles %}
+    <h2>{{article.title}}</h2>
+    <img src="{{article.image.url}}" alt="">
+    <a href="{% url 'single_article' article.id %}">View article</a>
+    {% endfor %}
+{%endblock%}
