--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@
     font-family: 'Acme', sans-serif;
 }
 
+/* Login */
 .box-form{
     margin: 0 auto;
     width: 100%;
@@ -28,11 +29,14 @@
     height: auto;
 }
 .box-form .left{
-    background-size: cover;
     background-repeat: no-repeat;
     background-image: url('/static/img/tucker-tangeman-9aAr_EFqYdc-unsplash.jpg');
+    /* background-image: url('/static/img/original.jpg'); */
     width: 50%;
+    background-size: 700px 635px;
+    
 }
+
 .box-form .left .overlay{
     width: 100%;
     height: 100%;
@@ -155,10 +159,10 @@ a{
     height: auto;
 }
 .box-form2 .right{
-    background-size: cover;
     background-repeat: no-repeat;
     background-image: url('/static/img/tucker-tangeman-9aAr_EFqYdc-unsplash.jpg');
     width: 50%;
+    background-size: 700px 635px
 }
 .box-form2 .right .overlay{
     width: 100%;
