--- a/changeapp/templates/profile.html
+++ b/changeapp/templates/profile.html
@@ -22,6 +22,10 @@
         <div>
             <form action="{% url 'update_profile' %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
+                <div class="form-group">
+                    <label for="" class="form-label text-sm">Username</label>
+                        <input type="text" class="form-control" placeholder="{{user.username}}" value="{{user.username}}" name="username" required>
+                            </div>
                  <div class="form-group">
                     <label for="" class="form-label text-sm">Full Name</label>
                         <input type="text" class="form-control" placeholder="Ruweydha Abdinoor" value="{{user.full_name}}" name="full_name" required>
