--- a/changeapp/templates/profile.html
+++ b/changeapp/templates/profile.html
@@ -24,7 +24,7 @@
                 {% csrf_token %}
                  <div class="form-group">
                     <label for="" class="form-label text-sm">Full Name</label>
-                        <input type="text" class="form-control" placeholder="Ruweydha Abdinoor" value="{{user.full_name}}" name="full_name" required>
+                        <input type="text" class="form-control" placeholder="Name please" value="{{user.full_name}}" name="full_name" required>
                             </div>
                             <div class="form-group">
                                 <label for="" class="form-label text-sm">Contact</label>
