--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,7 @@
     justify-content: space-between;
     background-color: #FDFFA9;
     height: 100vh; 
+    border: 3px solid #00C897;
 }
 @media (max-width: 980px){
     .box-form {
@@ -31,10 +32,9 @@
 .box-form .left{
     background-repeat: no-repeat;
     background-image: url('/static/img/tucker-tangeman-9aAr_EFqYdc-unsplash.jpg');
-    /* background-image: url('/static/img/original.jpg'); */
     width: 50%;
-    background-size: 700px 635px;
-    
+    background-size: 700px 636px;
+    background-position: center;
 }
 
 .box-form .left .overlay{
@@ -76,7 +76,7 @@
     padding: 13px;
     border-radius: 5px;
     border: 1px solid #00C897; 
-    
+    background-color: #FDFFA9; 
 }
 .box-form .right .form .remember-me{
     display: flex;
@@ -146,6 +146,7 @@ a{
     background-color: #FDFFA9;
     height: 100vh;
     font-family: 'Roboto';
+    border: 3px solid #00C897;
 }
 @media (max-width: 980px){
     .box-form2 {
@@ -162,7 +163,8 @@ a{
     background-repeat: no-repeat;
     background-image: url('/static/img/tucker-tangeman-9aAr_EFqYdc-unsplash.jpg');
     width: 50%;
-    background-size: 700px 635px
+    background-size: 700px 638px;
+    background-position: center;
 }
 .box-form2 .right .overlay{
     width: 100%;
@@ -203,6 +205,7 @@ a{
     padding: 13px;
     border-radius: 5px;
     border: 1px solid #00C897; 
+    background-color: #FDFFA9; 
     
 }
 
