--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Acme', sans-serif;
+    overflow: hidden;
 }
 
 /* Login */
@@ -16,7 +18,7 @@
     justify-content: space-between;
     background-color: #FDFFA9;
     height: 100vh; 
-    border: 3px solid #00C897;
+    border: 5px solid #00C897;
 }
 @media (max-width: 980px){
     .box-form {
@@ -33,26 +35,40 @@
     background-repeat: no-repeat;
     background-image: url('/static/img/tucker-tangeman-9aAr_EFqYdc-unsplash.jpg');
     width: 50%;
-    background-size: 700px 636px;
+    background-size: cover;
     background-position: center;
+    
 }
-
 .box-form .left .overlay{
     width: 100%;
     height: 100%;
     background: #FDFFA9;
-    /* background-color: transparent; */
-    background-color: rgba(253, 255, 169, 0.3);
+    background-color: rgba(253, 255, 169, 0.2);
+    padding: 30px;
+}
+.box-form .left .overlay blockquote{
+    text-align: center;
+    line-height: 2.5rem;
+    color: #1A202C;
+    margin-top: 180px;
+    font-size: 25px;
+}
+cite{
+    color: #fff;
+    font-size: 20px;
 }
 .box-form .right{
     padding: 40px;
-    width: 50%;
-    
-    
+    width: 50%;  
 }
+
 @media (max-width: 980px){
     .box-form .right {
         width: 100%;
+    }
+    .box-form .left{
+        width: 0;
+        display: none;
     }
 }
 .squeeze{
@@ -101,6 +117,7 @@ a{
     width: 100%;
     padding: 13px;
     border-radius: 5px;
+    transition: 1s;
 }
 .box-form .right .form .login button{
     background-color: #019267;
@@ -109,11 +126,18 @@ a{
     margin-bottom: 8px;
     border: none;
 }
-
+.box-form .right .form .login button:hover{
+    background-color: #00C897;
+    cursor: pointer;
+}
 .box-form .right .form .login-google button{
     background-color: #2D3748;
     color: #fff;
     border: none;
+}
+.box-form .right .form .login-google button:hover{
+    background-color: #000;
+    cursor: pointer;
 }
 .box-form .right .form .input_field{
     margin-bottom: 14px;
@@ -146,7 +170,7 @@ a{
     background-color: #FDFFA9;
     height: 100vh;
     font-family: 'Roboto';
-    border: 3px solid #00C897;
+    border: 5px solid #00C897;
 }
 @media (max-width: 980px){
     .box-form2 {
@@ -163,25 +187,34 @@ a{
     background-repeat: no-repeat;
     background-image: url('/static/img/tucker-tangeman-9aAr_EFqYdc-unsplash.jpg');
     width: 50%;
-    background-size: 700px 638px;
     background-position: center;
+    background-size: cover ;
 }
 .box-form2 .right .overlay{
     width: 100%;
     height: 100%;
     background: #FDFFA9;
-    /* background-color: transparent; */
-    background-color: rgba(253, 255, 169, 0.3);
+    background-color: rgba(253, 255, 169, 0.2);
+    padding: 30px;
+}
+.box-form2 .right .overlay blockquote{
+    text-align: center;
+    line-height: 2.5rem;
+    color: #1A202C;
+    margin-top: 180px;
+    font-size: 25px;
 }
 .box-form2 .left{
-    padding: 40px;
-    width: 50%;
-    
-    
+    padding: 30px;
+    width: 50%;  
 }
 @media (max-width: 980px){
     .box-form2 .left {
         width: 100%;
+    }
+    .box-form2 .right{
+        width: o;
+        display: none;
     }
 }
 .squeeze{
@@ -217,6 +250,7 @@ a{
     width: 100%;
     padding: 13px;
     border-radius: 5px;
+    transition: 1s;
 }
 .box-form2 .left .form .login button{
     background-color: #019267;
@@ -225,16 +259,20 @@ a{
     margin-bottom: 8px;
     border: none;
 }
-
+.box-form2 .left .form .login button:hover{
+    background-color: #00C897;
+    cursor: pointer;
+}
 .box-form2 .left .form .login-google button{
     background-color: #2D3748;
     color: #fff;
     border: none;
 }
-.box-form .left .form .input_field{
-    margin-bottom: 14px;
-    margin-top: 15px;
+.box-form2 .left .form .login-google button:hover{
+    background-color: #000;
+    cursor: pointer;
 }
+
 .box-form2 .left .form .input_field p{
     left: 0%;
     margin-bottom: 6px;
