--- a/changeapp/templates/home.html
+++ b/changeapp/templates/home.html
@@ -1,3 +1,6 @@
 {% extends 'base.html' %}
 {% load bootstrap5 %}
 {% block content %}
+<p>#POVERTY ERADICATION</p>
+<h1>STOP POVERTY<br>TOGETHER WE CAN.</h1>
+
