Changed the title of the app

--- a/changeapp/templates/base.html
+++ b/changeapp/templates/base.html
@@ -7,9 +7,9 @@
   <meta content='maximum-scale=1.0, initial-scale=1.0, width=device-width' name='viewport'>
 
   {% if title %}
-  <title>Awwwards - {{title}}</title>
+  <title>{{title}}</title>
   {% else %}
-    <title> Awwwards </title>
+    <title> Changetime </title>
     {{form.media}} 
   {% endif %}
   {% block styles %}
