--- a/changeapp/templates/profile.html
+++ b/changeapp/templates/profile.html
@@ -3,6 +3,10 @@
 {% block content %}
     <div class="container">
        <div>
+        <div
+        class="position-relative profile-user-pic rounded-circle border d-flex align-items-center justify-content-center">
+
+    </div>
             <div class="mt-3">
                  <span class="d-block h-100 w-100">
                      {% if user.avatar %}
@@ -40,6 +44,10 @@
                                 <textarea name="bio" class="form-control"
                                     rows="3">{% if user.bio %}{{user.bio}}{% endif %}</textarea>
                             </div>
+                            <div class="form-group pt-2">
+                                <input type="file" name="avatar" class="form-control" value="{{user.avatar.url}}">
+                            </div>
+                            
 
                             <div class="text-center pt-5">
                                 <button class="btn btn-primary px-4 text-white">
