--- a/changeapp/templates/single_article.html
+++ b/changeapp/templates/single_article.html
@@ -4,6 +4,15 @@
 <div>
     <h1>{{article.title}}</h1>
     <p>{{article.post| safe}}</p>
+    <img src="{{article.image.url}}" alt="">
+    <h2>Comments</h2>
+    {% for comment in comments %}
+    <p>{{comment.comment}}</p>
+    <p>by {{comment.commentor.username}}</p>
+    <p>{{comment.date_commented}}</p>
+    {% empty %}
+    <h2>No comments yet</h2>
+    {% endfor %}
     
     <!-- Button trigger modal -->
 {% if user == article.author %}
@@ -25,7 +34,7 @@
                 <div class="form-group">
                     <label for="" class="form-label text-sm">Tittle</label>
 
-                    <input type="text" class="form-control" placeholder="Title" value="{{article.title}}" required>
+                    <input type="text" name="title" class="form-control" placeholder="Title" value="{{article.title}}" required>
 
                 </div>
                 <div class="form-group d-none">
@@ -54,5 +63,11 @@
     </div>
   </div>
   {% endif %}
+  <form action="{% url 'add_comment' article.id %}" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    <input type="submit" class="btn btn-success btn-lg" value="Post">
+
+</form>
 </div>
 {%endblock%}
