--- a/changeapp/templates/base.html
+++ b/changeapp/templates/base.html
@@ -1,40 +1,42 @@
 {% load bootstrap5 %}
-{% load static%}
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
   <!-- <meta charset="utf-8"> -->
   <meta content='maximum-scale=1.0, initial-scale=1.0, width=device-width' name='viewport'>
 
+
   {% if title %}
-  <title>Awwwards - {{title}}</title>
+  <title>ChangeTime - {{title}}</title>
   {% else %}
-    <title> Awwwards </title>
-    {{form.media}} 
+    <title> ChangeTime </title>
   {% endif %}
+
   {% block styles %}
   {% bootstrap_css %}
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
   {% endblock %}
-
 </head>
+
 <body>
+    {% include 'navbar.html'%}
+    
     {% block content %} 
     
     {%endblock%}
 
-    {% block scripts %}
-      
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>
-var myModal = document.getElementById('myModal')
-var myInput = document.getElementById('myInput')
 
-myModal.addEventListener('shown.bs.modal', function () {
-  myInput.focus()
-})
-    </script>
-    {% bootstrap_javascript %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-    {% endblock %}
+
+    <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
+    <script src="https://kit.fontawesome.com/92684d67dd.js" crossorigin="anonymous"></script>
+
+    <script src="{% static 'js/scripts.js'%}"></script>
+    
 </body>
 </html>
