--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,120 @@
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Acme', sans-serif;
+    list-style: none;
+    text-decoration: none;
+    background-color: #FDFFA9;
     overflow: hidden;
+}
+section{
+    padding: 50px 3%;
+  }
+/* Navbar */
+header{
+    
+    width: 100%;
+    display: flex; 
+    justify-content: flex-start;
+    align-items: center;
+    padding: 5px 3%;
+    z-index: 1;
+}
+.navbar li{
+    display: inline-block;
+    padding: 10px 22px;
+}
+.navbar li a{
+    color: #00C897;
+    font-size: 18px;
+    transition: all 1.4s ease 0s;
+    text-decoration: none;
+}
+.navbar li a:hover{
+    cursor: pointer;
+    color: #019267;
+    background-color: #00C897;
+    padding: 10px;
+    color: #FFFFFF;
+}
+header li{
+    color: #00C897;
+    margin-left: auto;
+}
+header li a{
+    color: #00C897;
+}
+/* End of Navbar */
+
+
+/* Index/Home Section */
+
+.home{
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+.home-text{
+    text-transform: uppercase;
+}
+.home-text h3{
+    color: #00C897;
+    background: rgba(128, 128, 128, 0.2);
+    backdrop-filter: blur(10px);
+    background-size: 12px;
+    letter-spacing: 0.3em;
+    font-size: 28px;
+    font-weight: 500;
+    border-radius: 4px;
+    background-size: 440px 0;
+    width: 480px;
+}
+.home-text h3 span{
+    font-size: 40px;
+}
+.home-text h1{
+    color: #000;
+    font-size: 60px;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+    line-height: 70px;
+}
+.home-text h1:nth-child(3){
+    font-weight: 500;
+    font-size: 64px;
+    letter-spacing: 0.02em;
+    color: rgba(0, 0, 0, 0.8);
+}
+.home-text h1 span{
+    color: #00C897;
+}
+.home-text button{
+    width: 245px;
+    height: 65px;
+    border-radius: 8px;
+    background-color: #019267;
+    color: #FFFFFF;
+    font-size: 24px;
+    border: none;
+    font-weight: 500;
+    transition: all 1.4s ease 0s;
+}
+.home-text button:hover{
+    background-color: #00C897;
+}
+/* images */
+.home-img{
+    width: 100%;
+}
+.home-img img{
+  width: 85%;
+  border-radius: 8px;
 }
 
 /* Login */
@@ -105,7 +214,11 @@ cite{
     width: auto;
 }
 
-a{
+.remember-me p a{
+    text-decoration: none;
+    color: #2C5282;
+}
+.dont p a{
     text-decoration: none;
     color: #2C5282;
 }
