--- a/changeapp/templates/base.html
+++ b/changeapp/templates/base.html
@@ -18,11 +18,15 @@
 
 </head>
 <body>
+    {% include "navbar.html" %}
     {% block content %} 
-    
+    <p>#POVERTY ERADICATION</p>
+    <h1>STOP POVERTY<br>TOGETHER WE CAN.</h1>
+
     {%endblock%}
 
     {% block scripts %}
+
       
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
