--- a/changeapp/templates/index.html
+++ b/changeapp/templates/index.html
@@ -8,7 +8,7 @@
     <img src="{{article.image.url}}" alt="">
     <a href="{% url 'single_article' article.id %}">View article</a>
     {% endfor %}
-    <p>#POVERTY ERADICATION</p>
+    <p><span style="color:green;">#POVERTY ERADICATION</span></p>
     <h1>STOP<span style="color: green;">POVERTY</span><br>TOGETHER WE CAN.</h1>
-
+    <a router-Link="services">Donate<i class="bi bi-arrow-right"></i></a> 
 {%endblock%}
