--- a/changeapp/templates/index.html
+++ b/changeapp/templates/index.html
@@ -10,5 +10,8 @@
     {% endfor %}
     <p><span style="color:green;">#POVERTY ERADICATION</span></p>
     <h1>STOP<span style="color: green;">POVERTY</span><br>TOGETHER WE CAN.</h1>
-    <a router-Link="services">Donate<i class="bi bi-arrow-right"></i></a> 
+    <a router-Link="services">Donate<i class="bi bi-arrow-right"></i></a> <br><br>
+    <img src="../../static/img/hanna-morris-3EkT6xb4K9w-unsplash.jpg">
+    <img src="../../static/img/ian-macharia-gogGhbvHrYw-unsplash.jpg">
+    <img src="../../static/img/ninno-jackjr-CG6Gd__QIOY-unsplash.jpg"> <br><br>
 {%endblock%}
