This commit updates the article section

--- a/changeapp/templates/index.html
+++ b/changeapp/templates/index.html
@@ -17,4 +17,13 @@
                 alt="">
         </div>
     </section>
+    <!-- End of Home Section -->
+
+    <!-- Articles -->
+    <section class="menu">
+        <div class="heading">
+            <h1>The<span>Articles</span></h1>
+            <h2>Share your Story With Us.Help save a Human</h2>
+        </div>
+    </section>
 {%endblock%}
