This commit updates the google sign in color

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -225,6 +225,10 @@ cite{
     text-decoration: none;
     color: #2C5282;
 }
+.login-google a{
+    text-decoration: none;
+    color: #2C5282;
+}
 .box-form .right .form button{
     display: grid;
     justify-content: center;
