--- a/static/css/style.css
+++ b/static/css/style.css
@@ -154,7 +154,6 @@ header li a{
 .box-form .left .overlay{
     width: 100%;
     height: 100%;
-    background: #FDFFA9;
     background-color: rgba(253, 255, 169, 0.2);
     padding: 30px;
 }
@@ -164,10 +163,12 @@ header li a{
     color: #1A202C;
     margin-top: 180px;
     font-size: 25px;
+    background-color: transparent;
 }
 cite{
     color: #fff;
     font-size: 20px;
+    background-color: transparent;
 }
 .box-form .right{
     padding: 40px;
@@ -323,6 +324,7 @@ cite{
     color: #1A202C;
     margin-top: 180px;
     font-size: 25px;
+    background-color: transparent;
 }
 .box-form2 .left{
     padding: 30px;
