--- a/changeapp/templates/navbar.html
+++ b/changeapp/templates/navbar.html
@@ -1,20 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{%url'index'%}">Change-Time</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Change-Time</a>
         <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportContent" aria-controls="navbarSupportContent"aria-expanded="false" aria-label="Toggle-navigation">
             <span class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="{%url'home'%}">Home</a>
+                        <a class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{%url 'about-us'%}">About-Us</a>
+                        <a class="nav-link">About-Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{%url 'services'%}">Services</a>
+                        <a class="nav-link" >Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{%url 'contact'%}">Contact</a>
+                        <a class="nav-link">Contact</a>
                     </li>
                 </ul>
             </span>
