--- a/changeapp/templates/navbar.html
+++ b/changeapp/templates/navbar.html
@@ -3,8 +3,8 @@
 <header>
         <ul class="navbar">
             <li><a href="{% url 'index'%}">Home</a></li>
+            <li><a href="#articles">Articles</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
             <li><i class='bx bx-search'></i></li>
