--- a/changeapp/templates/profile.html
+++ b/changeapp/templates/profile.html
@@ -9,7 +9,7 @@
     </div>
             <div class="mt-3">
                  <span class="d-block h-100 w-100">
-                     {% if user.avatar %}
+                     {% if profile.avatar %}
                      <img src="{{profile.avatar.url}}" class="img-fluid" alt="">
                      {% else %}
                      <img src="{{profile.user_avatar}}" class="img-fluid" alt="">
