--- a/changeapp/templates/single_article.html
+++ b/changeapp/templates/single_article.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 {% load bootstrap5 %}
 {% block content %}
+{% load social_share %}
+
 <div>
     <h1>{{article.title}}</h1>
     <p>{{article.post| safe}}</p>
     <img src="{{article.image.url}}" alt="">
+    {% post_to_whatsapp object_or_url "Share via WhatsApp" %}
+    {% post_to_facebook object_or_url "Post to Facebook!" %}
+    {% post_to_twitter "New Article: {{object.title}}. Check it out!" object_or_url "Post to Twitter" %}
+    {% post_to_gplus object_or_url "Post to Google+!" %}
+    {% post_to_linkedin object_or_url %}
     <h2>Comments</h2>
     {% for comment in comments %}
     <p>{{comment.comment}}</p>
