Added fade in effect for the articles

--- a/changeapp/templates/index.html
+++ b/changeapp/templates/index.html
@@ -60,34 +60,34 @@
             <h2>Share your Story With Us.Help save a Human</h2>
         </div>
         <div class="article-container">
-          <div class="card">
+          <div class="card" data-aos="fade-out" data-aos-duration="3000">
             <div class="card-img">
               <img
                 src="static/img/tai-s-captures-Lhb-zwQ-QGI-unsplash.jpg"
                 alt="">
             </div>
             <h2>Health</h2>
-            <a href="{% url 'heath_articles' %}">View articles</a>
+            <a href="{% url 'heath_articles' %}"><button type="button">View article</button></a>
           </div>
 
-          <div class="card">
+          <div class="card" data-aos="fade-out" data-aos-duration="3000">
             <div class="card-img">
               <img
                 src="static/img/emmanuel-ikwuegbu-M-4lFg1Xfag-unsplash.jpg"
                 alt="">
             </div>
             <h2>Education</h2>
-            <a href="{% url 'education_articles' %}">View articles</a>
+            <a href="{% url 'education_articles' %}"><button type="button">View article</button></a>
           </div>
 
-          <div class="card">
+          <div class="card" data-aos="fade-out" data-aos-duration="3000">
             <div class="card-img">
               <img
                 src="static/img/jordan-opel-3VLHF9b9Plg-unsplash.jpg"
                 alt="">
             </div>
             <h2>Sanitation</h2>
-            <a href="{% url 'water_articles' %}">View articles</a>
+            <a href="{% url 'water_articles' %}"><button type="button">View article</button></a>
           </div>
 
         </div>
