--- a/changeapp/templates/articles/health.html
+++ b/changeapp/templates/articles/health.html
@@ -3,13 +3,30 @@
 {% load static %}
 
 {% block content %}
-    {% for article in articles %}
-    <h2>{{article.title}}</h2>
-    <img src="{{article.image.url}}" alt="">
-    <a href="{% url 'single_article' article.id %}">View article</a>
-    <a href="{% url 'profile' article.author.username %}">{{article.author.username}}</a>
-    <p>{{article.date_posted}}</p>
-    <a href="{% url 'single_article' article.id %}">View article</a>
+<section class="cards-articles">
+    <div class="article-post">
+        {% for article in articles %}
+        <div class="article-post_img">
+            <img src="{{article.image.url}}" alt="">
+        </div>
+        <div class="article-post_info">
+            <div class="article-post_date">
+                <p>{{article.date_posted}}</p>
+            </div>
+
+                <h3>Article By : <span>{{article.author.username}}</span></h3>
+
+                <h1 class="article-post_title">
+                    {{article.title}}
+                </h1>
+                <p class="article-post_text">
+                {{article.post| safe}}
+                </p>
+
+            <a href="{% url 'single_article' article.id %}" class="article-post_link">Comment and Share Article</a>
+        </div>
+    </div>
+</section>
 
     {% endfor %}
 
