--- a/changeapp/templates/new_article.html
+++ b/changeapp/templates/new_article.html
@@ -1,23 +1,22 @@
 {% extends 'base.html' %}
 {% load bootstrap5 %}
 {% block content %}
-<div class="container">
-
-
-    <div class="container-fluid">
-        <div class="container-lg" id="contentWrapper">
-            <div class="row mt-5">
-                    <div class="col-md-12">
-                        <form action="{% url 'newArticle' %}" method="post" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            {% bootstrap_form form %}
-                            <input type="submit" class="btn btn-success btn-lg" value="Post">
-                        
-                        </form>
-                    </div>
-                    </div>
-          </div>          
-       </div>                            
-   
-</div>
+<section class="new-article">
+    <div class="container">
+        <div class="container-fluid">
+            <div class="container-lg" id="contentWrapper">
+                <div class="row mt-5">
+                        <div class="col-md-12">
+                            <form action="{% url 'newArticle' %}" method="post" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                {% bootstrap_form form %}
+                                <input type="submit" class="btn btn-success btn-lg" value="Post">
+                            </form>
+                        </div>
+                </div>
+            </div>          
+        </div>                            
+    
+    </div>
+</section>
 {% endblock %}
