--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,6 +48,20 @@ header li{
 header li a{
     color: #00C897;
 }
+header li .dropdown a, i{
+    color: #00C897;
+    text-decoration: none;
+}
+header li .dropdown a, i:hover{
+    color: #019267;
+}
+header li .dropdown ul li{
+    color: #00C897;
+}
+header li .dropdown ul li a:hover{
+    color: #FFFFFF;
+    background-color: #00C897;
+}
 header li form{
     display: flex;
 }
@@ -591,4 +605,120 @@ cite{
 .box-form2 .left .form .login-google button i{
     
     color: #fff;
+}
+
+/* Profile section */
+.profile-update{
+    height: 100vh;
+}
+.profile .profile_pic {
+    position: relative;
+    width: 30%;
+    overflow: hidden;
+}
+
+.profile .profile_pic img {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+.profile .btn {
+    color: white;
+    background-color: #019267;
+    border: none;
+}
+.profile .btn:hover{
+    background-color: #00C897;
+}
+.profile li {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+form .modal .modal-dialog .modal-content .modal-body button{
+    background-color: #019267;
+    border: none;
+    width: 50px;
+}
+/* Articles cards */
+.cards-articles{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #019267;
+}
+.article-post{
+    width: 85%;
+    padding: 5rem;
+    background-color:#FDFFA9;
+    box-shadow: 0 1.4rem 5rem rgba(0, 0, 0,.3);
+    display: flex;
+    align-items: center;
+    border-radius: .8rem;
+    margin-top: 85px;
+}
+.article-post_img{
+    min-width: 35rem;
+    max-width: 35rem;
+    height: 30rem;
+    transform: translateX(-8rem);
+    position: relative;
+    border-radius: .8rem;
+}
+.article-post_img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: .8rem;
+}
+.article-post_img::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.article-post_title{
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    color: #00C897;
+    font-weight: 700;
+}
+.article-post_text{
+    font-size: 1rem;
+    color: #1A202C;
+    font-weight: 500;
+}
+.article-post_link{
+    display: inline-block;
+    padding: 1rem 2rem;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background-image: linear-gradient(to right, #00C897 0%, #019267 100%);
+    border-radius: 8px;
+    text-decoration: none;
+}
+.article-post_link:hover{
+    background-image: linear-gradient(to right, #019267 0%, #00C897 100%);
+    color: #FFFFFF;
+}
+.article-post_date p{
+    display: block;
+    color: rgba(0, 0, 0, .5);
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.article-post_info h3:nth-child(2){
+    text-decoration: none;
+    color: rgba(0, 0, 0, .5);
+    font-size: 20px;
+}
+.article-post_info h3:nth-child(2) span{
+    text-decoration: none;
+    color: #019267;
+    font-size: 20px;
 }
