My last updates

--- a/changeapp/templates/profile.html
+++ b/changeapp/templates/profile.html
@@ -133,7 +133,7 @@
                 </div>  
             </div>
         </section>
-        <a href="{% url 'newArticle' %}">Add Article</a>
+        <!-- <a href="{% url 'newArticle' %}">Add Article</a>
 
     {% endif %}
     {% for article in articles %}
@@ -143,6 +143,6 @@
     {% if user == article.author %}
     <a href="{% url 'delete_article' article.id %}" class="btn-md btn-outline-danger">Delete</a>
     <a href="{% url 'update_article' article.id %}" class="btn-md-btn-primary">Update</a>
-    {% endif %}
-    {% endfor %}
+    {% endif %} -->
+    <!-- {% endfor %} -->
 {%endblock%}
