--- a/static/css/style.css
+++ b/static/css/style.css
@@ -722,3 +722,41 @@ form .modal .modal-dialog .modal-content .modal-body button{
     color: #019267;
     font-size: 20px;
 }
+.comment-area img{
+    width: 250px;
+    height: 250px;
+    border-radius: 1rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.comment-area{
+    text-align: center;
+    text-decoration: none;
+}
+.comment-area button{
+    color: #fff;
+    background-color: #00C897;
+    border: none;
+    margin-bottom: 10px;
+}
+.comment-area button:hover{
+    background-color: #019267;
+
+}
+.comment-area h2{
+    color: #1A202C;
+}
+.whatsapp{
+    padding: 10px;
+    color: radial-gradient(at 20% 128%, #feda78 20%,#e23467 60%, #ac2bb3 90%);
+}
+.facebook{
+    padding: 10px;
+}
+.twitter{
+    padding: 10px;
+}
+.google{
+    padding: 10px;
+}
